# uptimerobot-mcp

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/uptimerobot_mcp/: __init__.py  __main__.py  client.py  server.py  validation.py
src/uptimerobot_mcp/tools/: __init__.py  account.py  contacts.py  maintenance.py  monitors.py
tests/: test_integration.py
